[gd_scene load_steps=59 format=2]

[ext_resource path="res://Scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://AllSprites/Sprites/13-Dialogue Boxes/lunchds.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/Menu/Start.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menu/Minigames.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menu/SumoBall3D.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Menu/DLV.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Menu/Guide.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Menu/Quit.gd" type="Script" id=8]
[ext_resource path="res://assets/RPGIcons/tile005.png" type="Texture" id=9]
[ext_resource path="res://Entities/Menu/Pointer.gd" type="Script" id=10]
[ext_resource path="res://Audio/changeOption.wav" type="AudioStream" id=11]
[ext_resource path="res://Audio/rejectOption.wav" type="AudioStream" id=12]
[ext_resource path="res://Audio/confirm.wav" type="AudioStream" id=13]
[ext_resource path="res://Audio/mcswindlers.wav" type="AudioStream" id=14]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile000.png" type="Texture" id=15]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile001.png" type="Texture" id=16]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile002.png" type="Texture" id=17]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile003.png" type="Texture" id=18]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile004.png" type="Texture" id=19]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile005.png" type="Texture" id=20]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile006.png" type="Texture" id=21]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile007.png" type="Texture" id=22]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile008.png" type="Texture" id=23]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile009.png" type="Texture" id=24]
[ext_resource path="res://Entities/Player/01-King Human/Idle/tile010.png" type="Texture" id=25]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile000.png" type="Texture" id=26]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile001.png" type="Texture" id=27]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile002.png" type="Texture" id=28]
[ext_resource path="res://Entities/Player/01-King Human/Death/tile003.png" type="Texture" id=29]
[ext_resource path="res://Entities/Player/01-King Human/Hit/tile000.png" type="Texture" id=30]
[ext_resource path="res://Entities/Player/01-King Human/Hit/tile001.png" type="Texture" id=31]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile000.png" type="Texture" id=32]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile001.png" type="Texture" id=33]
[ext_resource path="res://Entities/Player/01-King Human/Attack/tile002.png" type="Texture" id=34]
[ext_resource path="res://Entities/Player/01-King Human/Ground (78x58).png" type="Texture" id=35]
[ext_resource path="res://Entities/Player/01-King Human/Fall (78x58).png" type="Texture" id=36]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile000.png" type="Texture" id=37]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile001.png" type="Texture" id=38]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile002.png" type="Texture" id=39]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile003.png" type="Texture" id=40]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile004.png" type="Texture" id=41]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile005.png" type="Texture" id=42]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile006.png" type="Texture" id=43]
[ext_resource path="res://Entities/Player/01-King Human/DoorOut/tile007.png" type="Texture" id=44]
[ext_resource path="res://Entities/Player/01-King Human/Jump (78x58).png" type="Texture" id=45]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile000.png" type="Texture" id=46]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile001.png" type="Texture" id=47]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile002.png" type="Texture" id=48]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile003.png" type="Texture" id=49]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile004.png" type="Texture" id=50]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile005.png" type="Texture" id=51]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile006.png" type="Texture" id=52]
[ext_resource path="res://Entities/Player/01-King Human/Run/tile007.png" type="Texture" id=53]
[ext_resource path="res://Scenes/Menu/AnimatedSprite.gd" type="Script" id=54]
[ext_resource path="res://Scenes/Menu/ParallaxBackground.gd" type="Script" id=55]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 100
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": false,
"name": "death",
"speed": 3.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "hit",
"speed": 3.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": false,
"name": "ground",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": false,
"name": "falling",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": false,
"name": "door_out",
"speed": 9.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": false,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0509804, 0.121569, 0.223529, 0 )

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = 100.0
margin_right = 134.0
margin_bottom = 104.0

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_right = 1904.0
margin_bottom = 1084.0

[node name="Title" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_right = 1904.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "    LOST KINGDOM"

[node name="MenuEntries" type="VBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 1904.0
margin_bottom = 1084.0
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="Start" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 240.0
margin_right = 1904.0
margin_bottom = 341.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Start"
script = ExtResource( 3 )

[node name="Minigames" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries" groups=[
"save",
]]
modulate = Color( 1, 1, 1, 0.247059 )
margin_top = 356.0
margin_right = 1904.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Minigames"
script = ExtResource( 4 )

[node name="SumoBall3D" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries" groups=[
"save",
]]
visible = false
modulate = Color( 1, 1, 1, 0.247059 )
margin_top = 356.0
margin_right = 1904.0
margin_bottom = 457.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "?????"
script = ExtResource( 5 )

[node name="DLV" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries" groups=[
"save",
]]
visible = false
modulate = Color( 1, 1, 1, 0.247059 )
margin_top = 414.0
margin_right = 1904.0
margin_bottom = 515.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "?????"
script = ExtResource( 6 )

[node name="Guide" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 472.0
margin_right = 1904.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Guide"
script = ExtResource( 7 )

[node name="Quit" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
margin_top = 588.0
margin_right = 1904.0
margin_bottom = 689.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quit"
script = ExtResource( 8 )

[node name="Pointer" type="Sprite" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries"]
editor/display_folded = true
position = Vector2( -41.9886, 96.8071 )
scale = Vector2( 5, 5 )
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Sounds" type="Node" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer"]

[node name="changeOption" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 11 )
volume_db = -28.0

[node name="rejectOption" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="confirmOption" type="AudioStreamPlayer" parent="ColorRect/MarginContainer/VBoxContainer/MenuEntries/Pointer/Sounds"]
stream = ExtResource( 13 )
volume_db = -16.0

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -18.0
autoplay = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1436.04, 793.399 )
scale = Vector2( 10, 10 )
frames = SubResource( 3 )
animation = "hit"
flip_h = true
script = ExtResource( 54 )

[node name="NewAnimation" type="Timer" parent="AnimatedSprite"]
wait_time = 10.0
one_shot = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource( 55 )
